# pac55xx-pac

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  Makefile  README.md  device.x
.github/workflows/: ci.yml
src/: _vectors.rs  adc.rs  can.rs  crc.rs  gpio.rs  gptimer.rs  i2c.rs  lib.rs  memctl.rs  rtc.rs  scc.rs  ssp.rs  timer.rs  usart.rs  wwdt.rs
src/adc/: regs.rs  vals.rs
src/can/: regs.rs  vals.rs
src/crc/: regs.rs  vals.rs
src/gpio/: regs.rs  vals.rs
src/gptimer/: regs.rs  vals.rs
src/i2c/: regs.rs  vals.rs
src/memctl/: regs.rs  vals.rs
src/rtc/: regs.rs  vals.rs
src/scc/: regs.rs  vals.rs
src/ssp/: regs.rs  vals.rs
src/timer/: regs.rs  vals.rs
src/usart/: regs.rs  vals.rs
src/wwdt/: regs.rs  vals.rs
svd/: PAC55XX.svd  PAC55XX.transforms.yaml  PAC55XX.yaml
